<?xml version="1.0" encoding="utf-8"?>
<!--Layout Notes-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/opening_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/opening_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|center"
        android:text="@string/opening_message_2Dplot"
        android:textSize="25sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/greeninWhite"
        android:fontFamily="@font/font3"
        android:paddingTop="10dp"/>

<!--top row of icons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/plot_control_bar_background"
        >
<!--switch for top plot controls-->
        <Switch
            android:id="@+id/plotControlSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Edit"
            android:color="#987316"
            android:textSize="18sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <!--"Plot Size" Button-->
        <LinearLayout
            android:id="@+id/plot_size_button_layout"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/plot_control_background_active">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/plot_size_img"
                android:src="@drawable/plot_size"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:duplicateParentState="true">
            </ImageView>
            <TextView
                android:id="@+id/plot_size_text"
                android:text="@string/plot_size"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true">
            </TextView>
        </LinearLayout>
        <!--"Lighting" Button-->
        <LinearLayout
            android:id="@+id/lighting_button_layout"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/plot_control_background_active">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/lighting_img"
                android:src="@drawable/sun"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:duplicateParentState="true">
            </ImageView>
            <TextView
                android:id="@+id/lighting_text"
                android:text="@string/lighting"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true">
            </TextView>
        </LinearLayout>
        <!--"Add Plant" Button-->
        <LinearLayout
            android:id="@+id/add_plant_button_layout"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/plot_control_background_active">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/add_plant_img"
                android:src="@drawable/plus"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:duplicateParentState="true">
            </ImageView>
            <TextView
                android:id="@+id/add_plant_text"
                android:text="@string/add_plant"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true">
            </TextView>
        </LinearLayout>
        <!--"Share Plot" Button-->
        <LinearLayout
            android:id="@+id/share_plot_button_layout"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/plot_control_background_active">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/share_plot_img"
                android:src="@drawable/share"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:duplicateParentState="true">
            </ImageView>
            <TextView
                android:id="@+id/share_plot_text"
                android:text="@string/share_plot"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true">
            </TextView>
        </LinearLayout>
    </LinearLayout>
<!--Gridview Plot-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top|center"
            android:layout_weight="2">
            <GridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnWidth="90dp"
                android:numColumns="auto_fit"
                android:verticalSpacing="10dp"
                android:horizontalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:gravity="center"
                />

        </LinearLayout>

    <!--Creates the bottom navigation bar-->

    <LinearLayout
        android:id="@+id/bottom_navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:gravity="bottom|center">
        <!--"My Plots" Button-->
        <LinearLayout
            android:id="@+id/my_plots_button_layout"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/bottom_navigation_button_background">

            <ImageView
                android:paddingTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/my_plots_img"
                android:src="@drawable/my_plots_icon"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:duplicateParentState="true">
            </ImageView>
            <TextView
                android:id="@+id/my_plots_text"
                android:text="@string/my_plots"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:paddingTop="5dp"
                android:textColor="@color/whiteinGreen"
                android:fontFamily="@font/font3">
            </TextView>
        </LinearLayout>
        <!--"My Plants" Button-->
        <LinearLayout
            android:id="@+id/my_plants_button_layout"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/bottom_navigation_button_background">
            <ImageView
                android:paddingTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/my_plants_img"
                android:src="@drawable/my_plants_icon"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:duplicateParentState="true">
            </ImageView>
            <TextView
                android:id="@+id/my_plants_text"
                android:text="@string/my_plants"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:paddingTop="5dp"
                android:textColor="@color/whiteinGreen"
                android:fontFamily="@font/font3">
            </TextView>
        </LinearLayout>
        <!--"Discover" Button-->
        <LinearLayout
            android:id="@+id/discover_button_layout"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/bottom_navigation_button_background">
            <ImageView
                android:paddingTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/discover_img"
                android:src="@drawable/discover_icon"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:duplicateParentState="true">
            </ImageView>
            <TextView
                android:id="@+id/discover_text"
                android:text="@string/discover"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:paddingTop="5dp"
                android:textColor="@color/whiteinGreen"
                android:fontFamily="@font/font3">
            </TextView>
        </LinearLayout>
        <!--"Notifications" Button-->
        <LinearLayout
            android:id="@+id/notifications_button_layout"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/bottom_navigation_button_background">
            <ImageView
                android:paddingTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/notifications_img"
                android:src="@drawable/notifications_icon"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:duplicateParentState="true">
            </ImageView>
            <TextView
                android:id="@+id/notifications_text"
                android:text="@string/notifications"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:paddingTop="5dp"
                android:textColor="@color/whiteinGreen"
                android:fontFamily="@font/font3">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>